// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`国士無双 - 一向聴 1`] = `
{
  "rest": {
    "m": [
      牌 {
        "is赤牌": false,
        "number": 8,
        "str牌": "8m",
        "suit": "m",
      },
    ],
    "p": [],
    "s": [],
    "z": [],
  },
  "么九牌rest": [],
  "么九牌unique": [
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1m",
      "suit": "m",
    },
    牌 {
      "is赤牌": false,
      "number": 9,
      "str牌": "9m",
      "suit": "m",
    },
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1p",
      "suit": "p",
    },
    牌 {
      "is赤牌": false,
      "number": 9,
      "str牌": "9p",
      "suit": "p",
    },
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1s",
      "suit": "s",
    },
    牌 {
      "is赤牌": false,
      "number": 9,
      "str牌": "9s",
      "suit": "s",
    },
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 2,
      "str牌": "2z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 3,
      "str牌": "3z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 4,
      "str牌": "4z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 5,
      "str牌": "5z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 6,
      "str牌": "6z",
      "suit": "z",
    },
  ],
}
`;

exports[`国士無双 - 聴牌 1`] = `
{
  "rest": {
    "m": [],
    "p": [],
    "s": [],
    "z": [],
  },
  "么九牌rest": [
    牌 {
      "is赤牌": false,
      "number": 9,
      "str牌": "9m",
      "suit": "m",
    },
  ],
  "么九牌unique": [
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1m",
      "suit": "m",
    },
    牌 {
      "is赤牌": false,
      "number": 9,
      "str牌": "9m",
      "suit": "m",
    },
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1p",
      "suit": "p",
    },
    牌 {
      "is赤牌": false,
      "number": 9,
      "str牌": "9p",
      "suit": "p",
    },
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1s",
      "suit": "s",
    },
    牌 {
      "is赤牌": false,
      "number": 9,
      "str牌": "9s",
      "suit": "s",
    },
    牌 {
      "is赤牌": false,
      "number": 1,
      "str牌": "1z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 2,
      "str牌": "2z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 3,
      "str牌": "3z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 4,
      "str牌": "4z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 5,
      "str牌": "5z",
      "suit": "z",
    },
    牌 {
      "is赤牌": false,
      "number": 6,
      "str牌": "6z",
      "suit": "z",
    },
  ],
}
`;
